# hive-cli

./: .gitignore  Cargo.toml
cli/hive-cli/: Cargo.toml
cli/hive-cli/src/: init.rs  introspect.rs  main.rs  schema.rs
cli/hive-cli/src/commands/: codegen.rs  init.rs  introspect.rs  migrate.rs  mod.rs
cli/hive-codegen/src/: lib.rs
cli/hive-init/: Cargo.toml
cli/hive-introspect/: Cargo.toml
cli/hive-introspect/src/: lib.rs  read_db.rs
cli/hive-migrate/: Cargo.toml
cli/hive-schema/src/: lib.rs
hive-cli/: Cargo.toml
hive-cli/src/: introspect.rs  main.rs
hive-codegen/: Cargo.toml
hive-db/: Cargo.toml
hive-db/src/: connect.rs  lib.rs
hive-init/: Cargo.toml
hive-init/src/: lib.rs
hive-introspect/: Cargo.toml
hive-introspect/src/: lib.rs  read_db.rs
hive-migrate/: Cargo.toml
hive-migrate/src/: lib.rs
hive-query/: Cargo.toml
hive-schema/: Cargo.toml
hive-schema/src/: lib.rs  read_schema.rs  write_schema.rs
lib/hive-capabilities/: Cargo.toml
lib/hive-capabilities/src/: config.rs  connect.rs  lib.rs  os.rs  schema.rs  structs.rs  toml_schema.rs
lib/hive-capabilities/src/db/: mod.rs  read_db_schema.rs  write_schema_to_db.rs
lib/hive-config/: Cargo.toml
lib/hive-config/src/: config.rs  lib.rs
lib/hive-db/src/: connect.rs
