[package]
name = "hive-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hive"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }

# crates
hive-db = { path = "../hive-db" }
hive-introspect = { path = "../hive-introspect" }
hive-schema = { path = "../hive-schema" }
