[package]
name = "hive-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hive"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.48", features = ["full"] }

# crates
hive-db = { path = "../hive-db" }
hive-introspect = { path = "../hive-introspect" }
hive-schema = { path = "../hive-schema" }
