[package]
name = "hive-init"
description = "Initializes hive project. Creates directory that hive expects"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
hive-schema = {path = "../hive-schema"}
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "macros"] }