[package]
name = "hive-cli"
description = "Command line interface for hive"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hive"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.48", features = ["full"] }

# workspace crates
hive-capabilities = { path = "../../lib/hive-capabilities" }
