[package]
name = "hive-introspect"
description = "Reads the database schema and generates struct to reflect schema"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "macros"] }

hive-schema = { path = "../hive-schema" }