[package]
name = "hive-capabilities"
description = "Core capabilities for hive - database, schema, config"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
toml = "0.9"
urlencoding = "2.1"
